<resources>
    <string name="app_name">GitHub User</string>
    <string name="search">Search</string>
    <string name="search_hint">Cari GitHub User di sini</string>
    <string name="follower">Followers</string>
    <string name="following">Following</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="followers_label">Followers:</string>
    <string name="following_label">Following:</string>
    <string name="username_label">username</string>
    <string name="fullname_label">Full Name</string>
    <string name="followers_number">100</string>
    <string name="following_number">100</string>
    <string name="username_itemuser">username</string>

    <style name="TabLayoutTextStyle" parent="Widget.Design.TabLayout">
        <item name="android:textSize">16sp</item>
        <item name="textAllCaps">true</item>
        <item name="android:textColor">@color/white</item>
    </style>
</resources>