<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".main.FollowersFragment">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/gambar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            tools:src="@tools:sample/avatars"
            android:layout_margin="@android:dimen/app_icon_size"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/name"
            android:paddingBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="@string/fullname_label" />

        <TextView
            android:id="@+id/username"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:text="@string/username_label"/>

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            app:layout_constraintTop_toBottomOf="@+id/tvUsername"
            tools:ignore="MissingConstraints">

            <TableRow>

                <TextView
                    android:padding="6dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/followers_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Follower"
                    android:padding="6dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/followers_number"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:padding="6dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/following_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Following"
                    android:padding="6dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/following_number"
                    android:textStyle="bold" />

            </TableRow>

        </TableLayout>

        <ProgressBar
            android:id="@+id/progrerss_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_700"
            android:contentDescription="@string/follower"
            app:tabTextColor="@android:color/white"
            app:tabTextAppearance="@style/TabLayoutTextStyle"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</ScrollView>